[文章]：iOS RunLoop漫谈调整图片位置

--- a/_posts/2016-12-04-runloop.md
+++ b/_posts/2016-12-04-runloop.md
@@ -195,11 +195,13 @@ struct __CFRunLoopMode {
 
 关于RunLoop的具体执行流程，可以参照ibireme博客上的流程图帮助理解：
 
-## RunLoop的应用
-
 ![RunLoop](/img/runloop3.png)
 
+## RunLoop的应用
+
 **AutoreleasePool的实现**
+
+![RunLoop](/img/runloop4.png)
 
 主线程上执行的代码被AutoreleasePool包围着，不会出现内存泄漏的情况，所以也不用我们手动创建释放池了。
 
