[文章]：iOS RunLoop漫谈补充参考链接

--- a/_posts/2016-12-04-runloop.md
+++ b/_posts/2016-12-04-runloop.md
@@ -217,3 +217,8 @@ NSTimer可以看做是CFRunLoopTimerRef的封装，当一个NSTimer被添加到R
 
 GCD中，子线程通过dispatch_async提交任务到主线程时，主线程的RunLoop会收到消息，激活后通过回调处理任务，但这仅限于提交到主线程的任务，如果提交任务到子线程，则还是由GCD本身处理的，就与RunLoop无关了。
 
+
+参考链接
+
+[深入理解RunLoop](http://blog.ibireme.com/2015/05/18/runloop/)
+[Run Loops](https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/Multithreading/RunLoopManagement/RunLoopManagement.html#//apple_ref/doc/uid/10000057i-CH16-SW1)
