更新文章标签

--- a/_posts/2016-12-04-runloop.md
+++ b/_posts/2016-12-04-runloop.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: iOS RunLoop漫谈
-categories: iOS RunLoop
+categories: iOS
 date: 2016-12-04 12:51:05
 pid: 20161204-125105
 ---
