--- a/_posts/2016-12-13-runtime.md
+++ b/_posts/2016-12-13-runtime.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Runtime那点事儿
-categories: iOS Runtime
+categories: iOS
 date: 2016-12-13 14:24:31
 pid: 20161213-142431
 ---
